--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".VerifyPhoneNumber" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SplashScreen">
@@ -27,7 +27,8 @@
         <activity
             android:name=".Slider"
             android:exported="true" />
-        <activity android:name=".GetStarted"></activity>
+        <activity android:name=".GetStarted" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
