--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.android.support:design:27.1.1'
-
+    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
 
 }
