--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:name=".Slider"
             android:exported="true" />
         <activity android:name=".GetStarted" />
+        <activity android:name=".UserInfo"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
