--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ allprojects {
         mavenCentral()
         maven {
             url "https://maven.google.com"
-
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
