--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -34,7 +38,12 @@ dependencies {
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
     implementation 'com.android.support:design:28.0.0'
 
-
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.9.2'
 
 
 }
