--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
             url "https://maven.google.com"
         }
         maven { url "https://jitpack.io" }
+        maven {
+            url 'https://google.bintray.com/exoplayer/'
+        }
     }
 }
 
