--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -36,8 +35,17 @@
         <activity
             android:name=".LearnHowItWorks"
             android:exported="true" />
-        <activity android:name=".Industries"
+        <activity
+            android:name=".Industries"
             android:exported="true"></activity>
+        <activity android:name=".ForYou"
+            android:exported="true"></activity>
+
+        <activity
+            android:name=".VideoListDemoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
