--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.9.2'
     implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.9.2'
 
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
 }
 
