--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation "androidx.legacy:legacy-support-core-utils:1.0.0"
 
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.2'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
