--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,18 +38,20 @@
             android:exported="true" />
         <activity
             android:name=".Industries"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ForYou"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".VideoListDemoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".YoutubePlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"></activity>
-        <activity android:name=".AwwSnap"></activity>
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity android:name=".AwwSnap" />
+        <activity android:name=".NavigationDashboard"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
