Category and Company layout set!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,10 @@
             android:name=".YoutubePlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".AwwSnap" />
-        <activity android:name=".NavigationDashboard"
+        <activity
+            android:name=".NavigationDashboard"
+            android:exported="true" />
+        <activity android:name=".CategoryAndCompany"
             android:exported="true"></activity>
     </application>
 
