--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.facebook.shimmer:shimmer:0.3.0'
+    implementation 'com.github.Andy671:Dachshund-Tab-Layout:v0.3.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
