--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.facebook.shimmer:shimmer:0.3.0'
     implementation 'com.github.Andy671:Dachshund-Tab-Layout:v0.3.3'
+
+    implementation ('com.github.ganfra:material-spinner:2.0.0'){
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
