--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -47,8 +48,14 @@
         <activity
             android:name=".NavigationDashboard"
             android:exported="true" />
-        <activity android:name=".CategoryAndCompany"
-            android:exported="true"></activity>
+        <activity
+            android:name=".CategoryAndCompany"
+            android:exported="true" />
+        <activity
+            android:name=".AddLeadCustomer"
+            android:exported="true"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
     </application>
 
 </manifest>
