--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,19 +26,22 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1-beta01'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
 
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
+
+    //don't update this
+    //industry card gets changed
     implementation 'com.google.android.material:material:1.1.0-alpha01'
 
-
+    //exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.9.2'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.9.2'
@@ -53,12 +56,20 @@ dependencies {
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.2'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.3.0'
+
+    //tab-layout
     implementation 'com.github.Andy671:Dachshund-Tab-Layout:v0.3.3'
 
+    //spinner material
     implementation('com.github.ganfra:material-spinner:2.0.0') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
+
+    //preference screen
+    implementation "androidx.preference:preference:1.1.0-alpha02"
 }
 
 apply plugin: 'com.google.gms.google-services'
