--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
     //preference screen
     implementation "androidx.preference:preference:1.1.0-alpha02"
+
+    //loaction API
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
