--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -64,7 +63,8 @@
         <activity
             android:name=".ProductDetails"
             android:exported="true" />
-        <activity android:name=".ViewBrochure"></activity>
+        <activity android:name=".ViewBrochure">
+        </activity>
     </application>
 
 </manifest>
