--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
 
+    // apache common lang
+    implementation 'org.apache.commons:commons-lang3:3.6'
+
     //preference screen
     implementation "androidx.preference:preference:1.1.0-alpha02"
 
