--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     //industry card gets changed
     implementation 'com.google.android.material:material:1.1.0-alpha01'
 
+    implementation 'com.razorpay:checkout:1.5.1'
+
     //exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.9.2'
