Fix: account screen and terms and condition

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
 
     //loaction API
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+
+    // loading animation
+    implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
