--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     // loading animation
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+    implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
