all screens done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.neelanshsethi.recko.EditUserInfoActivity"/>
+        <activity android:name="com.example.neelanshsethi.recko.AccountEditActivity"/>
     </application>
 
 </manifest>
