--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,6 +99,12 @@
         </activity>
         <activity android:name="com.example.neelanshsethi.recko.EditUserInfoActivity"/>
         <activity android:name="com.example.neelanshsethi.recko.AccountEditActivity"/>
+        <activity android:name="com.example.neelanshsethi.recko.LogoutActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.recko.Logout"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
