--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
+    compile 'com.android.support:support-v4:25.3.1'
+
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -85,6 +89,8 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     //implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
