--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
-    compile 'com.android.support:support-v4:25.3.1'
+    implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
