--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     //implementation 'com.google.firebase:firebase-auth:16.0.1:15.0.0'
 
+    // Dynamic forms
+    implementation 'me.riddhimanadib.form-master:form-master:1.1.0'
 
 }
 
