--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,7 @@
         <activity android:name="com.example.neelanshsethi.recko.LeadInfoActivity"/>
         <activity android:name="com.example.neelanshsethi.recko.PaymentDynamicActivity"/>
         <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.YoutubePlayerCustomActivity"/>
+        <activity android:name="com.example.neelanshsethi.recko.IndustryEditActivity"/>
     </application>
 
 </manifest>
