--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,28 +24,33 @@
             android:value="rzp_test_cqaJDphyOlEaqG"
             />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.MainActivity"
             android:windowSoftInputMode="stateVisible" />
-        <activity android:name="com.example.neelanshsethi.recko.VerifyPhoneNumber" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.VerifyPhoneNumber" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.ProfileActivity"
             android:exported="true" />
-        <activity android:name="com.example.neelanshsethi.recko.SplashScreen">
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.neelanshsethi.recko.GetStarted" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.GetStarted" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.UserInfo"
             android:exported="true"
             android:windowSoftInputMode="stateVisible" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.LearnHowItWorks"
             android:exported="true" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.Industries"
             android:exported="true" />
         <activity
@@ -55,31 +60,35 @@
         <activity
             android:name="com.example.neelanshsethi.recko.YoutubePlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-        <activity android:name="com.example.neelanshsethi.recko.AwwSnap" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.AwwSnap" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.NavigationDashboard"
             android:exported="true" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.CategoryAndCompany"
             android:exported="true" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.AddLeadCustomer"
             android:exported="true"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name="com.example.neelanshsethi.recko.ProductsInCategory" />
-        <activity android:name="com.example.neelanshsethi.recko.ProductsInCompany" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.ProductsInCategory" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.ProductsInCompany" />
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.neelanshsethi.recko.ProductDetails"
             android:exported="true" />
-        <activity android:name="com.example.neelanshsethi.recko.ViewBrochure"/>
-        <activity android:name="com.example.neelanshsethi.recko.PaymentActivity" />
-        <activity android:name="com.example.neelanshsethi.recko.ReferActivity" >
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.ViewBrochure"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.PaymentActivity" />
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.ReferActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.Refer" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.neelanshsethi.recko.AccountActivity">
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.AccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.recko.Account"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -91,24 +100,24 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.example.neelanshsethi.recko.ProfileInfoActivity">
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.ProfileInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.recko.ProfileInfo"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.example.neelanshsethi.recko.EditUserInfoActivity"/>
-        <activity android:name="com.example.neelanshsethi.recko.AccountEditActivity"/>
-        <activity android:name="com.example.neelanshsethi.recko.LogoutActivity">
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.EditUserInfoActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.AccountEditActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.LogoutActivity">
             <intent-filter>
                 <action android:name="android.intent.action.recko.Logout"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.example.neelanshsethi.recko.LeadInfoActivity"/>
-        <activity android:name="com.example.neelanshsethi.recko.PaymentDynamicActivity"/>
-        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.YoutubePlayerCustomActivity"/>
-        <activity android:name="com.example.neelanshsethi.recko.IndustryEditActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.LeadInfoActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.PaymentDynamicActivity"/>
+        <activity android:name="com.example.neelanshsethi.recko.YoutubePlayerCustomActivity"/>
+        <activity android:screenOrientation="portrait" android:name="com.example.neelanshsethi.recko.IndustryEditActivity"/>
     </application>
 
 </manifest>
