--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:screenOrientation="portrait"
             android:name="com.recko.app.UserInfo"
             android:exported="true"
-            android:windowSoftInputMode="stateVisible" />
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:screenOrientation="portrait"
             android:name="com.recko.app.LearnHowItWorks"
