--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
 
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
@@ -105,6 +105,9 @@ dependencies {
 
     // Remote config
     implementation 'com.google.firebase:firebase-config:16.5.0'
+
+    // Firebase datastore
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
