--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ android {
         applicationId "com.recko.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 3
+        versionCode 5
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
