--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.recko.app"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 9
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -29,23 +29,23 @@ dependencies {
 
     implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
 
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-auth:16.2.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
 
-    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
 
     //don't update this
     //industry card gets changed
     implementation 'com.google.android.material:material:1.1.0-alpha01'
 
-    implementation 'com.razorpay:checkout:1.5.1'
+    implementation 'com.razorpay:checkout:1.5.4'
 
     //exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.9.2'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     implementation "androidx.legacy:legacy-support-core-utils:1.0.0"
 
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.2'
@@ -64,12 +64,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     //shimmer
-    implementation 'com.facebook.shimmer:shimmer:0.3.0'
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
 
     //tab-layout
     implementation 'com.github.Andy671:Dachshund-Tab-Layout:v0.3.3'
 
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:facebook-android-sdk:5.0.0'
 
     //spinner material
     implementation('com.github.ganfra:material-spinner:2.0.0') {
@@ -80,10 +80,10 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.6'
 
     //preference screen
-    implementation "androidx.preference:preference:1.1.0-alpha02"
+    implementation "androidx.preference:preference:1.1.0"
 
     //loaction API
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // loading animation
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
@@ -101,13 +101,13 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
     // crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Remote config
-    implementation 'com.google.firebase:firebase-config:16.5.0'
+    implementation 'com.google.firebase:firebase-config:19.1.1'
 
     // Firebase datastore
-    implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
